initialSetup/main/default/objects/Patient_Consent_Invite__c/Patient_Consent_Invite__c.object-meta.xml
<CustomObject>
    <label>Patient Consent Invite</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Patient Consent Invite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Consent Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>