initialSetup/main/default/objects/Patient_Consent_Invite__c/fields/Enrolled_Site_Research_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site_Research_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled Site Research Candidate</label>
    <referenceTo>Enrolled_Site_Research_Candidate__c</referenceTo>
    <relationshipLabel>Patient Consent Invites</relationshipLabel>
    <relationshipName>Patient_Consent_Invites</relationshipName>
    <type>Lookup</type>
</CustomField>