initialSetup/main/default/objects/Patient_Consent_Invite__c/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <formula>Enrolled_Site_Research_Candidate__r.Enrolled_Site__r.Healthcare_Facility__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthcare Facility</label>
    <type>Text</type>
</CustomField>