initialSetup/main/default/objects/Patient_Consent_Invite__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Enrolled_Site_Research_Candidate__r.Patient__r.FirstName + &apos; &apos; +  Enrolled_Site_Research_Candidate__r.Patient__r.LastName</formula>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>