initialSetup/main/default/objects/Patient_Consent_Invite__c/fields/Research_Study__c.field-meta.xml
<CustomField>
    <fullName>Research_Study__c</fullName>
    <formula>Enrolled_Site_Research_Candidate__r.Enrolled_Site__r.CRO_Research_Study__r.CRO_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Study</label>
    <type>Text</type>
</CustomField>