initialSetup/main/default/objects/Patient_Consent_Invite__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invite Sent for Enrollment</fullName>
            </value>
            <value>
                <fullName>Enrollment Accepted</fullName>
            </value>
            <value>
                <fullName>Enrollment Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>