initialSetup/main/default/objects/Patient_Consent_Invite__c/listViews/Patient_Invites.listView-meta.xml
<ListView>
    <fullName>Patient_Invites</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Patient Invites</label>
</ListView>